# zuul-config

./: README.md  setup.cfg  tox.ini
containers/: Dockerfile.f36
nodepool/: logging.conf  nodepool.yaml
nodepool/elements/infra-package-needs/: pkg-map
nodepool/elements/infra-package-needs/install.d/: 10-packages  40-install-bindep  40-install-tox
nodepool/elements/nodepool-base/finalise.d/: 89-boot-settings  89-glean
nodepool/elements/nodepool-base/install.d/: 20-iptables
nodepool/elements/nodepool-base/post-install.d/: 20-iptables
nodepool/elements/otc-base/: package-installs.yaml  pkg-map
nodepool/elements/zuul-worker/install.d/: 60-zuul-worker
playbooks/base/: post-logs.yaml  post.yaml  pre.yaml
zuul/: main.yaml
zuul.d/: jobs.yaml  nodesets.yaml  pipelines.yaml  project.yaml  project.yaml.orig  secrets.yaml  timer_pipelines.yaml
zuul.d/container-images/: base.yaml  fedora.yaml
zuul.d/hello-world/: pipelines.yaml
