[metadata]
name = scs-zuul-config
summary = Zuul configuration for the SCS on OTC
description_file =
    README.rst
author = OpenTelekomCloud Eco Infrastructure Team
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
